--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -9,7 +9,7 @@
     android:layout_gravity="center"
     android:gravity="center"
     android:background="@color/black"
-    tools:context=".Splash_Activity">
+    tools:context=".view.Splash_Activity">
     <ImageView
         android:layout_width="200dp"
         android:layout_height="200dp"
