--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -7,6 +7,14 @@
     android:layout_height="match_parent"
     android:padding="24dp">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Welcome back"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        android:layout_marginBottom="24dp"/>
+
     <EditText
         android:id="@+id/etUsername"
         android:layout_width="match_parent"
@@ -41,7 +49,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text=""
-        android:textColor="#FF0000"
+        android:textColor="#ffc800"
         android:gravity="center"
         android:layout_marginTop="20dp"/>
 
