--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -49,7 +49,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text=""
-        android:textColor="#ffc800"
+        android:textColor="#ff2f00"
         android:gravity="center"
         android:layout_marginTop="20dp"/>
 
